--- a/cv.tex
+++ b/cv.tex
@@ -40,7 +40,7 @@
     \item Detailed understanding of protocols including HTTP, TCP/IP, DNS, TLS.
     \item Strong skill with both front-end and back-end development: React/Next.JS, Svelte/SvelteKit, Wasm, REST APIs, PostgreSQL, SQLite, Redis, OAuth.
     \item Organised and independent. Able to work from a loose brief, resolve tricky questions, create clarity with thorough and evidenced report, and prototype features rapidly.
-    \item Embrace challenges, collaboration and growth mindset. Working across team to ensure best practice.
+    \item Embrace challenges, collaboration and growth mindset. Working across teams to ensure best practice.
     % \item Experience with GCP and AWS: App and Compute Engine, Storage, S3 and IAM
   \end{itemize}
 
