--- a/cv.tex
+++ b/cv.tex
@@ -98,7 +98,7 @@
 
   \begin{itemize}
     \item Dec 2023--current: \textbf{Volunteer GCSE Math Tutor} for \href{https://www.theaccessproject.org.uk}{\color{link}The Access Project}
-    \item Jul 2020: Won first place in a algorithm contest of 180 people, rewarded with £1,000 Tesco gift card.
+    \item Jul 2020: Won first place in an algorithm contest of 180 people, rewarded with £1,000 Tesco gift card.
   \end{itemize}
 
   \section{Personal Projects}
