--- a/cv.tex
+++ b/cv.tex
@@ -33,6 +33,7 @@
   \section{Skills and knowledge}
 
   \begin{itemize}
+    \setlength\itemsep{0.1\parskip}
     \item In-depth Azure experience: App Service, Cognitive Services / OpenAI, CosmosDB, Kubernetes (AKS), Entra~ID (AAD), Bicep/ARM templates and more.
     \item Fluent in Python, JavaScript/TypeScript, Rust, C\#, C, Powershell, and high adaptability to new languages and frameworks.
     \item Familiar with Git, Docker, Kubernetes, Grafana, and experienced with developing in both a Linux and Windows environment.
