--- a/cv.tex
+++ b/cv.tex
@@ -87,7 +87,7 @@
         \item Built a Tetris bot in Python which scored 3rd place in the 140 person class.
         \item Received a top submission award on a system specification coursework.
 
-        \item Released a container image build system \href{https://modus-continens.com/}{\color{link}Modus} as my final year dissertation.
+        \item Developed a container image build system, alternative to Dockerfile, as part of my final year dissertation.
       \end{itemize}
 
     % \item \textbf{A-Level} \dashdiv{} (Shenzhen, China) Nanshan Chinese International College \dashdiv{} 2017-2019
