--- a/cv.tex
+++ b/cv.tex
@@ -30,39 +30,34 @@
 \begin{document}
   \header
 
-  \section{Skills and knowledge}
+  % \section{Highlighted skills}
 
-  \begin{itemize}
-    \setlength\itemsep{0.1\parskip}
-    \item In-depth Azure experience: App Service, Cognitive Services / OpenAI, CosmosDB, Kubernetes (AKS), Entra~ID (AAD), Bicep/ARM templates and more.
-    \item Fluent in Python, JavaScript/TypeScript, Rust, C\#, C, Powershell, and high adaptability to new languages and frameworks.
-    \item Familiar with Git, Docker, Kubernetes, Grafana, and experienced with developing in both a Linux and Windows environment.
-    \item Experienced with specification, design, architecture, threat modelling and spotting security issues.
-    \item Detailed understanding of protocols including HTTP, TCP/IP, DNS, TLS.
-    \item Strong skills with both front-end and back-end development: React/Next.JS, Svelte/SvelteKit, Wasm, REST APIs, PostgreSQL, SQLite, Redis, OAuth.
-    \item Organised and independent. Able to work from a loose brief, resolve tricky questions, create clarity with thorough and evidenced report, and prototype features rapidly.
-    \item Embrace challenges, collaboration and growth mindset. Working across teams to ensure best practice.
-    % \item Experience with GCP and AWS: App and Compute Engine, Storage, S3 and IAM
-  \end{itemize}
-
+  % \begin{itemize}
+  %   \setlength\itemsep{0.1\parskip}
+  %   \item Significant cloud experience with Azure, also familiar with Google Cloud Platform and AWS.
+  %   \item Fluent in Python, JavaScript/TypeScript, Rust, C\#, C, Powershell, and high adaptability to new languages and frameworks.
+  %   % \item Experience with GCP and AWS: App and Compute Engine, Storage, S3 and IAM
+  % \end{itemize}
   \section{Work Experience}
 
   \begin{itemize}
-    \item \textbf{Software Engineer} % (L60)
-    \dashdiv{} Microsoft \dashdiv{} Sept 2022--current
+    \item \textbf{Software Engineer} \dashdiv{} Microsoft \dashdiv{} Sept 2022--current
 
     \begin{itemize}
       \item Worked in a fast-moving, agile team to develop an Azure service for real time AI driven phone scam detection solution.
-      \item Feature development covering the entire specification, design, implementation, testing and deployment process.
+      \item Gained In-depth Azure experience: App Service, Cognitive Services / OpenAI, CosmosDB, Kubernetes (AKS), Entra~ID (AAD), Bicep/ARM templates and more.
+      \item Gained and leverged detailed understanding of protocols including HTTP, TCP/IP, DNS, TLS.
+      \item Worked on C, C\#, Python, Rust and PowerShell codebases, in both a Linux and Windows environment.
+      \item Prototyped various features quickly to help stakeholders assess requirements or facilitate customer demos.
       \item Proactively and independently reached out and worked closely with multiple other Azure teams to resolve performance and integration issues in our dependent services.
-      % \item Resolving performance or design issues via careful debugging and testing, as well as by working closely with team members and cross-team contacts including Azure Networking, ACS, Identity and others.
     \end{itemize}
 
-    \item \textbf{Part-time Lead Developer} \dashdiv{} CORE Data Systems \dashdiv{} Jul 2020--Sept 2022
+    \item \textbf{Lead Developer} \dashdiv{} CORE Data Systems \dashdiv{} Jul 2020--Sept 2022 (part-time)
 
     \begin{itemize}
-      \item Overtook the development of a suite of games for GCSE sciences, maintaining a PHP + React codebase, adding payment and subscriber management features.
+      \item Overtook the development of a suite of games for GCSE sciences, maintaining a PHP + React codebase, adding payment (PayPal integration) and subscriber management features.
       \item Interviewed and onboarded new developers and reviewed their code.
+      \item Took over responsibilities from a leaving lead developer to manage the Google Cloud-based infrastructure, utilising App and Compute Engine, Storage, Cloud SQL and Datastore, and other products.
       \item Saved £60 per month in cloud cost by converting a VM-based reverse proxy to use Cloudflare Workers instead.
     \end{itemize}
 
@@ -70,7 +65,7 @@
 
     \begin{itemize}
       \item Designed and built a dashboard for developers to search for and check the build and deploy status of their projects.
-      \item Used a graph database to model dependencies. Created Prometheus metrics which surfaced performance issues.
+      \item Used React (front-end), Python/fastapi (backend) and Redisgraph (a graph database based on Redis which supports Cypher). Used APIs to read information from different services including Kubernetes. Used Prometheus to export metrics which helped debug performance issues.
       \item Worked in a team with 2 other interns to deliver a project presentation and demo to the whole of the Technology division, and incorporated developer feedback.
     \end{itemize}
 
@@ -86,7 +81,6 @@
       \begin{itemize}
         \item Built a Tetris bot in Python which scored 3rd place in the 140 person class.
         \item Received a top submission award on a system specification coursework.
-
         \item Developed a container image build system, alternative to Dockerfile, as part of my final year dissertation.
       \end{itemize}
 
@@ -108,7 +102,7 @@
     \item \href{https://chat.maowtm.org}{\textbf{\color{link}chat.maowtm.org}} \ghurl{https://github.com/micromaomao/chat.maowtm.org}: RAG-based AI chatbot \dashdiv{} Aug 2023
 
     % \begin{itemize}
-    %   \item Based on Retrieval Augmented Generation, usingthe old Winterbells game OpenAI completion and embedding models, built as a Next.JS application with Fluent UI framework and PostgreSQL (Neon) as backend
+    %   \item Based on Retrieval Augmented Generation, using OpenAI completion and embedding models, built as a Next.JS application with Fluent UI framework and PostgreSQL (Neon) as backend
     % \end{itemize}
 
     % \item \href{https://books.maowtm.org}{\textbf{\color{link}books.maowtm.org}} \ghurl{https://github.com/micromaomao/books.maowtm.org}: Online 3D virtual bookshelf \dashdiv{} Jun 2022
@@ -117,19 +111,19 @@
 
     \item \href{https://leafvote.mww.moe}{\color{link}\textbf{Leafvote}} \ghurl{https://github.com/micromaomao/leafvote}: Paper-ticket based live voting solution built with React and NodeJS used by my high school \dashdiv{} Aug 2018
 
-    % \begin{itemize}
-    %   \item Uses MongoDB, WebSocket for lower latency, and LaTeX for voting ticket generation.
-    %   \item Successfully handled 300+ voters at once.
-    % \end{itemize}
+    \begin{itemize}
+      \item Uses MongoDB, WebSocket for lower latency, and LaTeX for voting ticket generation.
+      \item Successfully handled 300+ voters at once.
+    \end{itemize}
 
     \item \textbf{go-ecbpass} \ghurl{https://github.com/micromaomao/go-ecbpass}: Stateless, deterministic password manager built in Go \dashdiv{} Oct 2018
 
     \item \href{https://paper.sc}{\color{link}\textbf{paper.sc}} \ghurl{https://github.com/micromaomao/schsrch}: Past paper search engine built with React, NodeJS, Elasticsearch and PDF.js \dashdiv{} 2016--2019
 
-    % \begin{itemize}
-    %   \item Average of \raisebox{0.2\baselineskip}{\texttildelow}9000 daily searches over 365 days (2019-2020); recommended by a number of teachers.
-    %   % \item Custom PDF viewer with automatic cross-reference to solution sheets built with PDF.js.
-    % \end{itemize}
+    \begin{itemize}
+      \item Average of \raisebox{0.2\baselineskip}{\texttildelow}9000 daily searches over 365 days (2019-2020); recommended by a number of teachers.
+      % \item Custom PDF viewer with automatic cross-reference to solution sheets built with PDF.js.
+    \end{itemize}
 
     % (More projects available on GitHub)
 
