--- a/cv.tex
+++ b/cv.tex
@@ -12,7 +12,7 @@
     % {\color{black!50!white}\emph{(\today)}}
     Software Engineer at Microsoft UK. Curious, analytical, and passionate about doing the right thing.};
 
-    \node[anchor=north east, text width=0.4\textwidth, align=flush right, inner ysep=0cm] (contacts) at (topright)
+    \node[anchor=north east, text width=0.4\textwidth, align=flush right, inner ysep=0cm, yshift=0.05cm] (contacts) at (topright)
       {m@{\color{link}\href{https://maowtm.org}{maowtm.org}} \\
         {\color{link}\href{https://github.com/micromaomao}{\githubicon{} micromaomao}} \\
         \href{https://blog.maowtm.org/}{\color{link}\pencil{}Blog}
@@ -40,7 +40,8 @@
     \item Experienced with specification, design, architecture, threat modelling and spotting security issues.
     \item Detailed understanding of protocols including HTTP, TCP/IP, DNS, TLS.
     \item Strong skills with both front-end and back-end development: React/Next.JS, Svelte/SvelteKit, Wasm, REST APIs, PostgreSQL, SQLite, Redis, OAuth.
-    \item Organised and independent. Able to work from a loose brief, resolve tricky questions, create clarity with thorough and evidenced report, and prototype features rapidly.
+    \item Technical writing: \href{https://blog.maowtm.org/}{\color{link}blog articles} on experimentation with Linux high performance networking (DPDK / io\_uring), cloud architecture, deep-dive into the Certificate Transparency protocol, probability/dynamic programming, and more.
+    \item Organised and independent. Able to work from a loose brief, resolve tricky questions, and prototype features rapidly.
     \item Embrace challenges, collaboration and growth mindset. Working across teams to ensure best practice.
     % \item Experience with GCP and AWS: App and Compute Engine, Storage, S3 and IAM
   \end{itemize}
@@ -71,7 +72,7 @@
     \begin{itemize}
       \item Designed and built a dashboard for developers to search for and check the build and deploy status of their projects.
       \item Used a graph database to model dependencies. Created Prometheus metrics which surfaced performance issues.
-      \item Worked in a team with 2 other interns to deliver a project presentation and demo to the whole of the Technology division, and incorporated developer feedback.
+      % \item Worked in a team with 2 other interns to deliver a project presentation and demo to the whole of the Technology division, and incorporated developer feedback.
     \end{itemize}
 
   \end{itemize}
