--- a/cv.tex
+++ b/cv.tex
@@ -35,6 +35,7 @@
   \begin{itemize}
     \setlength\itemsep{0.1\parskip}
     \item In-depth Azure experience: App Service, Cognitive Services / OpenAI, CosmosDB, Kubernetes (AKS), Entra~ID (AAD), Bicep/ARM templates and more.
+    % \item In-depth Azure experience from time at Microsoft, also familiar with other cloud platforms including GCP and AWS.
     \item Fluent in Python, JavaScript/TypeScript, Rust, C\#, C, Powershell, and high adaptability to new languages and frameworks.
     \item Familiar with Git, Docker, Kubernetes, Grafana, and experienced with developing in both a Linux and Windows environment.
     \item Experienced with specification, design, architecture, threat modelling and spotting security issues.
@@ -106,15 +107,17 @@
   \section{Personal Projects}
 
   \begin{itemize}
-    \item \href{https://chat.maowtm.org}{\textbf{\color{link}chat.maowtm.org}} \ghurl{https://github.com/micromaomao/chat.maowtm.org}: RAG-based AI chatbot \dashdiv{} Aug 2023
+    \item \href{https://chat.maowtm.org}{\textbf{\color{link}chat.maowtm.org}} \ghurl{https://github.com/micromaomao/chat.maowtm.org}: RAG-based AI chatbot doing an impression of myself \dashdiv{} Aug 2023
 
     % \begin{itemize}
-    %   \item Based on Retrieval Augmented Generation, usingthe old Winterbells game OpenAI completion and embedding models, built as a Next.JS application with Fluent UI framework and PostgreSQL (Neon) as backend
+    %   \item Based on Retrieval Augmented Generation, using the old OpenAI completion and embedding models, built as a Next.JS application with Fluent UI framework and PostgreSQL (Neon) as backend
     % \end{itemize}
 
     % \item \href{https://books.maowtm.org}{\textbf{\color{link}books.maowtm.org}} \ghurl{https://github.com/micromaomao/books.maowtm.org}: Online 3D virtual bookshelf \dashdiv{} Jun 2022
 
-    \item \href{https://bellclone.maowtm.org/}{\color{link}\textbf{Bellclone}} \ghurl{https://github.com/micromaomao/bellclone}: Game built with Rust (Wasm) and OpenGL \dashdiv{} Sept 2021
+    \item \href{https://bellclone.maowtm.org/}{\color{link}\textbf{Bellclone}} \ghurl{https://github.com/micromaomao/bellclone}: A re-make of the old Winterbells game built with Rust (wasm) and OpenGL \dashdiv{} Sept 2021
+
+    % \item \textbf{ctclient} \ghurl{https://github.com/micromaomao/ctclient}: Certificate Transparency Log client in Rust with \href{https://blog.maowtm.org/ct/en.html}{\color{link}detailed blog article} \dashdiv{} Jul-Aug 2020
 
     \item \href{https://leafvote.mww.moe}{\color{link}\textbf{Leafvote}} \ghurl{https://github.com/micromaomao/leafvote}: Paper-ticket based live voting solution built with React and NodeJS used by my high school \dashdiv{} Aug 2018
 
