--- a/cv.tex
+++ b/cv.tex
@@ -36,11 +36,11 @@
     \setlength\itemsep{0.1\parskip}
     \item In-depth Azure experience: App Service, Cognitive Services / OpenAI, CosmosDB, Kubernetes (AKS), Entra~ID (AAD), Bicep/ARM templates and more.
     % \item In-depth Azure experience from time at Microsoft, also familiar with other cloud platforms including GCP and AWS.
-    \item Fluent in Python, JavaScript/TypeScript, Rust, C\#, C, Powershell, and high adaptability to new languages and frameworks.
+    \item Fluent in Python, JavaScript/TypeScript, Java, Rust, C\#, C, and high adaptability to new languages and frameworks.
     \item Familiar with Git, Docker, Kubernetes, Grafana, and experienced with developing in both a Linux and Windows environment.
     \item Experienced with specification, design, architecture, threat modelling and spotting security issues.
     \item Detailed understanding of protocols including HTTP, TCP/IP, DNS, TLS.
-    \item Strong skills with both front-end and back-end development: React/Next.JS, Svelte/SvelteKit, Wasm, REST APIs, PostgreSQL, SQLite, Redis, OAuth.
+    \item Strong skills with both front-end and back-end development: React, Svelte, REST APIs, PostgreSQL, SQLite, Redis, OAuth.
     \item Technical writing: \href{https://blog.maowtm.org/}{\color{link}blog articles} on experimentation with Linux high performance networking (DPDK / io\_uring), cloud architecture, deep-dive into the Certificate Transparency protocol, probability/dynamic programming, and more.
     \item Organised and independent. Able to work from a loose brief, resolve tricky questions, and prototype features rapidly.
     \item Embrace challenges, collaboration and growth mindset. Working across teams to ensure best practice.
