--- a/cv.tex
+++ b/cv.tex
@@ -117,7 +117,7 @@
 
     \item \href{https://bellclone.maowtm.org/}{\color{link}\textbf{Bellclone}} \ghurl{https://github.com/micromaomao/bellclone}: A re-make of the old Winterbells game built with Rust (wasm) and OpenGL \dashdiv{} Sept 2021
 
-    % \item \textbf{ctclient} \ghurl{https://github.com/micromaomao/ctclient}: Certificate Transparency Log client in Rust with \href{https://blog.maowtm.org/ct/en.html}{\color{link}detailed blog article} \dashdiv{} Jul-Aug 2020
+    \item \textbf{ctclient} \ghurl{https://github.com/micromaomao/ctclient}: Certificate Transparency Log client in Rust with \href{https://blog.maowtm.org/ct/en.html}{\color{link}detailed blog article} \dashdiv{} Jul-Aug 2020
 
     \item \href{https://leafvote.mww.moe}{\color{link}\textbf{Leafvote}} \ghurl{https://github.com/micromaomao/leafvote}: Paper-ticket based live voting solution built with React and NodeJS used by my high school \dashdiv{} Aug 2018
 
