--- a/cv.tex
+++ b/cv.tex
@@ -54,7 +54,7 @@
     \dashdiv{} Microsoft \dashdiv{} Sept 2022--current
 
     \begin{itemize}
-      \item Worked in a fast-moving, agile team to develop an Azure service for real time AI driven phone scam detection solution.
+      \item Worked in a fast-moving, agile team to develop an Azure service for real time AI driven phone scam detection.
       \item Feature development covering the entire specification, design, implementation, testing and deployment process.
       \item Proactively and independently reached out and worked closely with multiple other Azure teams to resolve performance and integration issues in our dependent services.
       % \item Resolving performance or design issues via careful debugging and testing, as well as by working closely with team members and cross-team contacts including Azure Networking, ACS, Identity and others.
