--- a/styles.tex
+++ b/styles.tex
@@ -17,6 +17,7 @@
 \usepackage{transparent}
 \usepackage{setspace}
 \usetikzlibrary{calc}
+\usetikzlibrary{positioning}
 \graphicspath{{icons/}}
 \input{icons.tex}
 
