--- a/cv.tex
+++ b/cv.tex
@@ -39,34 +39,34 @@
         \begin{itemize}
           \setlength\itemsep{3pt}
           \item In-depth Azure cloud-native development
-          \item Fluent: Python, C\#/.NET, C
+          \item Fluent: Python, Rust, C\#/.NET, C
           \item Git, Docker, Kubernetes, Grafana
           \item Linux development and administration
           \item Detailed knowledge of HTTP, TCP/IP, DNS, TLS
+          \item Specification, design, architecture, security
         \end{itemize}
       };
-      \node[color=black, fill=white, right=3pt of n1.north west] {%
-        \textbf{At work}
+      \node[color=black, fill=white, right=4pt of n1.north west, anchor=base west, yshift=-4pt] {%
+        \textbf{Used at work}
       };
       \node[box, below right=0pt of n1.north east, xshift=10pt] (n2) {%
         \begin{itemize}
           \setlength\itemsep{3pt}
           \item Google Cloud and AWS.
-          \item Fluent: JavaScript/TypeScript, Rust, Java, C++
+          \item Fluent: JavaScript/TypeScript, Java, C++
           \item Front-end: React, Svelte (NextJS, SvelteKit)
           \item Back-end: ExpressJS, FastAPI, PostgreSQL, Redis
-          \item Cryptography, algorithms, 3D graphics
+          \item 3D graphics, cryptography, algorithms
         \end{itemize}
       };
-      \node[color=black, fill=white, right=3pt of n2.north west] {%
-        \textbf{Personal experience}
+      \node[color=black, fill=white, right=4pt of n2.north west, anchor=base west, yshift=-4pt] {%
+        \textbf{Significant personal experience}
       };
     \end{tikzpicture}}%
   }
 
   \begin{itemize}
     \setlength\itemsep{0.1\parskip}
-    \item Experienced with specification, design, architecture, threat modelling and spotting security issues.
     \item Technical writing: \href{https://blog.maowtm.org/}{\color{link}blog articles} on experimentation with Linux high performance networking (DPDK / io\_uring), cloud architecture, deep-dive into the Certificate Transparency protocol, probability/dynamic programming, and more.
     \item Organised and independent. Able to work from a loose brief, resolve tricky questions, and prototype features rapidly.
     \item Embrace challenges, collaboration and growth mindset. Working across teams to ensure best practice.
@@ -138,7 +138,7 @@
     %   \item Based on Retrieval Augmented Generation, using the old OpenAI completion and embedding models, built as a Next.JS application with Fluent UI framework and PostgreSQL (Neon) as backend
     % \end{itemize}
 
-    % \item \href{https://books.maowtm.org}{\textbf{\color{link}books.maowtm.org}} \ghurl{https://github.com/micromaomao/books.maowtm.org}: Online 3D virtual bookshelf \dashdiv{} Jun 2022
+    \item \href{https://books.maowtm.org}{\textbf{\color{link}books.maowtm.org}} \ghurl{https://github.com/micromaomao/books.maowtm.org}: Online 3D virtual bookshelf built with Three.js \dashdiv{} Jun 2022
 
     \item \href{https://bellclone.maowtm.org/}{\color{link}\textbf{Bellclone}} \ghurl{https://github.com/micromaomao/bellclone}: A re-make of the old Winterbells game built with Rust (wasm) and OpenGL \dashdiv{} Sept 2021
 
