--- a/cv.tex
+++ b/cv.tex
@@ -39,7 +39,7 @@
         \begin{itemize}
           \setlength\itemsep{3pt}
           \item In-depth Azure cloud-native development
-          \item Fluent: Python, Rust, C\#/.NET, C
+          \item Fluent: Python, Rust, JavaScript/TypeScript, C\#/.NET, C
           \item Git, Docker, Kubernetes, Grafana
           \item Linux development and administration
           \item Detailed knowledge of HTTP, TCP/IP, DNS, TLS
@@ -53,23 +53,22 @@
         \begin{itemize}
           \setlength\itemsep{3pt}
           \item Google Cloud and AWS.
-          \item Fluent: JavaScript/TypeScript, Java, C++
+          \item Fluent: Java, C++
           \item Front-end: React, Svelte (NextJS, SvelteKit)
           \item Back-end: ExpressJS, FastAPI, PostgreSQL, Redis
           \item 3D graphics, cryptography, algorithms
         \end{itemize}
       };
       \node[color=black, fill=white, right=4pt of n2.north west, anchor=base west, yshift=-4pt] {%
-        \textbf{Significant personal experience}
+        \textbf{Personal project experience}
       };
     \end{tikzpicture}}%
   }
 
   \begin{itemize}
     \setlength\itemsep{0.1\parskip}
-    \item Technical writing: \href{https://blog.maowtm.org/}{\color{link}blog articles} on experimentation with Linux high performance networking (DPDK / io\_uring), cloud architecture, deep-dive into the Certificate Transparency protocol, probability/dynamic programming, and more.
-    \item Organised and independent. Able to work from a loose brief, resolve tricky questions, and prototype features rapidly.
-    \item Embrace challenges, collaboration and growth mindset. Working across teams to ensure best practice.
+    \item \href{https://blog.maowtm.org/}{\color{link}Blog articles} on experimentation with Linux high performance networking (DPDK / io\_uring), cloud architecture, deep-dive into the Certificate Transparency protocol, probability/dynamic programming, and more.
+    \item Embrace challenges, collaboration and growth mindset. Able to prototype rapidly from loose brief.
   \end{itemize}
 
   \section{Work Experience}
