--- a/cv.tex
+++ b/cv.tex
@@ -32,41 +32,14 @@
 
   \section{Skills and knowledge}
 
-  {%
-    \centering\makebox[\textwidth]{%
-      \begin{tikzpicture}[box/.style={inner ysep=6pt, inner xsep=4pt, draw=gray, rectangle, text width=0.483\textwidth, align=justify}]%
-      \node[box] (n1) {%
-        \begin{itemize}
-          \setlength\itemsep{3pt}
-          \item In-depth Azure cloud-native development
-          \item Fluent: Python, Rust, JavaScript/TypeScript, C\#/.NET, C
-          \item Git, Docker, Kubernetes, Grafana
-          \item Linux development and administration
-          \item Detailed knowledge of HTTP, TCP/IP, DNS, TLS
-          \item Specification, design, architecture, security
-        \end{itemize}
-      };
-      \node[color=black, fill=white, right=4pt of n1.north west, anchor=base west, yshift=-4pt] {%
-        \textbf{Used at work}
-      };
-      \node[box, below right=0pt of n1.north east, xshift=10pt] (n2) {%
-        \begin{itemize}
-          \setlength\itemsep{3pt}
-          \item Google Cloud and AWS.
-          \item Fluent: Java, C++
-          \item Front-end: React, Svelte (NextJS, SvelteKit)
-          \item Back-end: ExpressJS, FastAPI, PostgreSQL, Redis
-          \item 3D graphics, cryptography, algorithms
-        \end{itemize}
-      };
-      \node[color=black, fill=white, right=4pt of n2.north west, anchor=base west, yshift=-4pt] {%
-        \textbf{Personal project experience}
-      };
-    \end{tikzpicture}}%
-  }
-
   \begin{itemize}
     \setlength\itemsep{0.1\parskip}
+    \item In-depth Azure cloud-native development from time at Microsoft; Also familiar with Google Cloud and AWS.
+    \item Fluent: Python, Rust, JavaScript/TypeScript, C\#/.NET, Java, C/C++
+    \item Skilled with Git, Docker, Kubernetes, Grafana, and developing in both a Linux and Windows environment
+    \item Detailed knowledge of HTTP, TCP/IP, DNS, TLS
+    \item Experienced with specification, design, architecture, and security / threat modelling
+    \item Web full-stack: React, Svelte (NextJS, SvelteKit), ExpressJS, FastAPI, PostgreSQL, Redis
     \item \href{https://blog.maowtm.org/}{\color{link}Blog articles} on experimentation with Linux high performance networking (DPDK / io\_uring), cloud architecture, deep-dive into the Certificate Transparency protocol, probability/dynamic programming, and more.
     \item Embrace challenges, collaboration and growth mindset. Able to prototype rapidly from loose brief.
   \end{itemize}
