--- a/cv.tex
+++ b/cv.tex
@@ -1,4 +1,5 @@
 \input{styles.tex}
+\usetikzlibrary{backgrounds}
 \hyphenation{PostgreSQL}
 
 \def\header{%
@@ -35,9 +36,9 @@
   \begin{itemize}
     \setlength\itemsep{0.1\parskip}
     \item In-depth Azure cloud-native development from time at Microsoft; Also familiar with Google Cloud and AWS.
-    \item Fluent: Python, Rust, JavaScript/TypeScript, C\#/.NET, Java, C/C++
+    \item Fluent: Python, Rust, JavaScript/TypeScript, C\#/.NET, Go, Java, C/C++
     \item Skilled with Git, Docker, Kubernetes, Grafana, and developing in both a Linux and Windows environment
-    \item Detailed knowledge of HTTP, TCP/IP, DNS, TLS
+    \item Detailed knowledge of HTTP, TCP/IP, DNS and TLS, ability to work with low level network protocols
     \item Experienced with specification, design, architecture, and security / threat modelling
     \item Web full-stack: React, Svelte (NextJS, SvelteKit), ExpressJS, FastAPI, PostgreSQL, Redis
     \item \href{https://blog.maowtm.org/}{\color{link}Blog articles} on experimentation with Linux high performance networking (DPDK / io\_uring), cloud architecture, deep-dive into the Certificate Transparency protocol, probability/dynamic programming, and more.
@@ -50,9 +51,30 @@
     \item \textbf{Software Engineer} % (L60)
     \dashdiv{} Microsoft \dashdiv{} Sept 2022--current
 
+    % \vspace*{-4pt}
+
+    % {%
+    %   \centering\begin{tikzpicture}[color=black!50!white, overlay]
+    %     \draw[dashed] (0.0\textwidth,0) -- (0.8\textwidth,0pt) node[pos=0, fill=white, anchor=west, yshift=0.5pt] {Azure Core \hspace*{10pt}};
+    %     \useasboundingbox (0,0) rectangle (\textwidth,0);
+    %   \end{tikzpicture}%
+    % }\vspace{2pt plus 4pt}%
+
     \begin{itemize}
-      \item Worked in a fast-moving, agile team to develop an Azure service for real time AI driven phone scam detection.
-      \item Feature development covering the entire specification, design, implementation, testing and deployment process.
+      \item \textbf{Confidential Computing, Azure Core}: Working on foundational infrastructure to make Azure more secure
+      \item Developed component in the Windows OS to support confidential Windows containers.
+    % \end{itemize}\vspace{-2pt plus 2pt}
+    %
+    % {%
+    %   \centering\begin{tikzpicture}[color=black!50!white, overlay]
+    %     \draw[dashed] (0.0\textwidth,0) -- (0.8\textwidth,0pt) node[pos=0, fill=white, anchor=west, yshift=0.5pt] {Azure for Operators \hspace*{10pt}};
+    %     \useasboundingbox (0,0) rectangle (\textwidth,0);
+    %   \end{tikzpicture}%
+    % }\vspace{2pt plus 4pt}%
+    %
+    % \begin{itemize}
+      \item \textbf{Azure for Operators}: Worked in a fast-moving, agile team to develop an Azure service for real time AI driven phone scam detection.
+      % \item Feature development covering the entire specification, design, implementation, testing and deployment process.
       \item Proactively and independently reached out and worked closely with multiple other Azure teams to resolve performance and integration issues in our dependent services.
       % \item Resolving performance or design issues via careful debugging and testing, as well as by working closely with team members and cross-team contacts including Azure Networking, ACS, Identity and others.
     \end{itemize}
@@ -97,7 +119,7 @@
   \section{Additional activities}
 
   \begin{itemize}
-    \item Dec 2023--current: \textbf{Volunteer GCSE Math Tutor} for \href{https://www.theaccessproject.org.uk}{\color{link}The Access Project}
+    \item Dec 2023--Jul 2024: \textbf{Volunteer GCSE Math Tutor} for \href{https://www.theaccessproject.org.uk}{\color{link}The Access Project}
     \item Jul 2020: Won first place in an algorithm contest of 180 people, rewarded with £1,000 Tesco gift card.
   \end{itemize}
 
