--- a/cv.tex
+++ b/cv.tex
@@ -11,7 +11,7 @@
     \node[font=\Large] (name) at (topleft) {Tingmao Wang};
     \node (bio) at (name.south west) {%
     % {\color{black!50!white}\emph{(\today)}}
-    Software Engineer at Microsoft UK. Curious, analytical, and passionate about doing the right thing.};
+    Software Engineer at Microsoft UK who loves solving problems from all levels};
 
     \node[anchor=north east, text width=0.4\textwidth, align=flush right, inner ysep=0cm, yshift=0.05cm] (contacts) at (topright)
       {m@{\color{link}\href{https://maowtm.org}{maowtm.org}} \\
@@ -35,12 +35,13 @@
 
   \begin{itemize}
     \setlength\itemsep{0.1\parskip}
-    \item In-depth Azure cloud-native development from time at Microsoft; Also familiar with Google Cloud and AWS.
-    \item Fluent: Python, Rust, JavaScript/TypeScript, C\#/.NET, Go, Java, C/C++
-    \item Skilled with Git, Docker, Kubernetes, Grafana, and developing in both a Linux and Windows environment
-    \item Detailed knowledge of HTTP, TCP/IP, DNS and TLS, ability to work with low level network protocols
-    \item Experienced with specification, design, architecture, and security / threat modelling
-    \item Web full-stack: React, Svelte (NextJS, SvelteKit), ExpressJS, FastAPI, PostgreSQL, Redis
+    \item Experience with system-level programming and debugging including the Linux kernel and infrastructure-level cloud services.
+    \item Fluent: Python, Go, C/C++, Rust, JavaScript/TypeScript, Java. Quick to pick up new languages.
+    \item Experience with cloud-native development on Azure and familiar with Google Cloud and AWS.
+    % \item Skilled with Git, Docker, Kubernetes, Grafana, and developing in both a Linux and Windows environment
+    \item Detailed knowledge of networking protocols (HTTP, TCP/IP, DNS, TLS) and familiarity with containers and virtualization.
+    % \item Experienced with specification, design, architecture, and security / threat modelling
+    \item Experience with full-stack Web development: React, Svelte (NextJS, SvelteKit), FastAPI, PostgreSQL, Redis.
     \item \href{https://blog.maowtm.org/}{\color{link}Blog articles} on experimentation with Linux high performance networking (DPDK / io\_uring), cloud architecture, deep-dive into the Certificate Transparency protocol, probability/dynamic programming, and more.
     \item Embrace challenges, collaboration and growth mindset. Able to prototype rapidly from loose brief.
   \end{itemize}
@@ -61,8 +62,9 @@
     % }\vspace{2pt plus 4pt}%
 
     \begin{itemize}
-      \item \textbf{Confidential Computing, Azure Core}: Working on foundational infrastructure to make Azure more secure
-      \item Developed component in the Windows OS to support confidential Windows containers.
+      \item \textbf{Confidential Computing, Azure Core}: Working on Confidential Containers on Linux and Windows, making foundational Azure infrastructure more secure.
+      \item Resolved issues relating to interrupt handling and devices for a Linux SEV-SNP guest under Hyper-V.
+      % \item Created test suites to provoke problems, and CI pipelines to monitor regressions.
     % \end{itemize}\vspace{-2pt plus 2pt}
     %
     % {%
@@ -73,7 +75,7 @@
     % }\vspace{2pt plus 4pt}%
     %
     % \begin{itemize}
-      \item \textbf{Azure for Operators}: Worked in a fast-moving, agile team to develop an Azure service for real time AI driven phone scam detection.
+      \item \textbf{Voice Core, Azure for Operators}: Worked in a fast-moving, agile team to develop an Azure service for real time AI driven phone scam detection.
       % \item Feature development covering the entire specification, design, implementation, testing and deployment process.
       \item Proactively and independently reached out and worked closely with multiple other Azure teams to resolve performance and integration issues in our dependent services.
       % \item Resolving performance or design issues via careful debugging and testing, as well as by working closely with team members and cross-team contacts including Azure Networking, ACS, Identity and others.
