--- a/cv.tex
+++ b/cv.tex
@@ -35,15 +35,14 @@
 
   \begin{itemize}
     \setlength\itemsep{0.1\parskip}
-    \item Experience with system-level programming and debugging including the Linux kernel and infrastructure-level cloud services.
-    \item Fluent: Python, Go, C/C++, Rust, JavaScript/TypeScript, Java. Quick to pick up new languages.
-    \item Experience with cloud-native development on Azure and familiar with Google Cloud and AWS.
-    % \item Skilled with Git, Docker, Kubernetes, Grafana, and developing in both a Linux and Windows environment
+    \item Experience with system-level programming and debugging, including the Linux kernel and infrastructure-level cloud services.
+    \item Fluent: C/C++, Python, Go, Rust, JavaScript/TypeScript, Java. Quick to pick up new languages.
+    \item Skilled with Git, Docker, Kubernetes, Grafana, and developing in both a Linux and Windows environment
     \item Detailed knowledge of networking protocols (HTTP, TCP/IP, DNS, TLS) and familiarity with containers and virtualization.
+    \item Experience with cloud-native development on Azure, full-stack web development, databases
     % \item Experienced with specification, design, architecture, and security / threat modelling
-    \item Experience with full-stack Web development: React, Svelte (NextJS, SvelteKit), FastAPI, PostgreSQL, Redis.
-    \item \href{https://blog.maowtm.org/}{\color{link}Blog articles} on experimentation with Linux high performance networking (DPDK / io\_uring), cloud architecture, deep-dive into the Certificate Transparency protocol, probability/dynamic programming, and more.
-    \item Embrace challenges, collaboration and growth mindset. Able to prototype rapidly from loose brief.
+    \item Blog articles on \href{https://draft.blog.maowtm.org/linux-ick/en}{\color{link}Linux kernel experimentation}, \href{https://blog.maowtm.org/dpdk/en.html}{\color{link}DPDK}, \href{https://blog.maowtm.org/ct/en.html}{\color{link}deep-dive into Certificate Transparency}, \href{https://blog.maowtm.org/}{\color{link}and more}.
+    \item Embrace challenges, collaboration and growth mindset. Able to prototype rapidly from loose requirements.
   \end{itemize}
 
   \section{Work Experience}
@@ -52,39 +51,20 @@
     \item \textbf{Software Engineer} % (L60)
     \dashdiv{} Microsoft \dashdiv{} Sept 2022--current
 
-    % \vspace*{-4pt}
-
-    % {%
-    %   \centering\begin{tikzpicture}[color=black!50!white, overlay]
-    %     \draw[dashed] (0.0\textwidth,0) -- (0.8\textwidth,0pt) node[pos=0, fill=white, anchor=west, yshift=0.5pt] {Azure Core \hspace*{10pt}};
-    %     \useasboundingbox (0,0) rectangle (\textwidth,0);
-    %   \end{tikzpicture}%
-    % }\vspace{2pt plus 4pt}%
+    \begin{itemize}
+      \item \textbf{Confidential Computing, Azure Core}: Working on Confidential Containers on Linux, contributing to the security of foundational Azure infrastructure.
+      \item Resolved an issue related to interrupt handling and worked around a VMBus-related bug for a Linux SEV-SNP guest under Hyper-V. Wrote CI pipeline to regularly stress-test the kernel and caught regressions.
+    \end{itemize}
 
     \begin{itemize}
-      \item \textbf{Confidential Computing, Azure Core}: Working on Confidential Containers on Linux and Windows, making foundational Azure infrastructure more secure.
-      \item Resolved issues relating to interrupt handling and devices for a Linux SEV-SNP guest under Hyper-V.
-      % \item Created test suites to provoke problems, and CI pipelines to monitor regressions.
-    % \end{itemize}\vspace{-2pt plus 2pt}
-    %
-    % {%
-    %   \centering\begin{tikzpicture}[color=black!50!white, overlay]
-    %     \draw[dashed] (0.0\textwidth,0) -- (0.8\textwidth,0pt) node[pos=0, fill=white, anchor=west, yshift=0.5pt] {Azure for Operators \hspace*{10pt}};
-    %     \useasboundingbox (0,0) rectangle (\textwidth,0);
-    %   \end{tikzpicture}%
-    % }\vspace{2pt plus 4pt}%
-    %
-    % \begin{itemize}
-      \item \textbf{Voice Core, Azure for Operators}: Worked in a fast-moving, agile team to develop an Azure service for real time AI driven phone scam detection.
-      % \item Feature development covering the entire specification, design, implementation, testing and deployment process.
-      \item Proactively and independently reached out and worked closely with multiple other Azure teams to resolve performance and integration issues in our dependent services.
-      % \item Resolving performance or design issues via careful debugging and testing, as well as by working closely with team members and cross-team contacts including Azure Networking, ACS, Identity and others.
+      \item \textbf{Voice Core, Azure for Operators}: Worked in a fast-moving, agile team to develop an Azure service for real-time AI-driven phone scam detection.
+      \item Proactively collaborated with multiple Azure teams to resolve performance and integration issues in dependent services.
     \end{itemize}
 
     \item \textbf{Part-time Lead Developer} \dashdiv{} CORE Data Systems \dashdiv{} Jul 2020--Sept 2022
 
     \begin{itemize}
-      \item Overtook the development of a suite of games for GCSE sciences, maintaining a PHP + React codebase, adding payment and subscriber management features.
+      \item Took over the development of a suite of games for GCSE sciences, maintaining a PHP + React codebase, adding payment and subscriber management features.
       \item Interviewed and onboarded new developers and reviewed their code.
       \item Saved £60 per month in cloud cost by converting a VM-based reverse proxy to use Cloudflare Workers instead.
     \end{itemize}
@@ -94,9 +74,7 @@
     \begin{itemize}
       \item Designed and built a dashboard for developers to search for and check the build and deploy status of their projects.
       \item Used a graph database to model dependencies. Created Prometheus metrics which surfaced performance issues.
-      % \item Worked in a team with 2 other interns to deliver a project presentation and demo to the whole of the Technology division, and incorporated developer feedback.
     \end{itemize}
-
   \end{itemize}
 
   \section{Education}
@@ -107,22 +85,17 @@
       First Class Honours: final average 82.84\%. Entered Dean's List for ``outstanding academic performance''.
 
       \begin{itemize}
-        \item Built a Tetris bot in Python which scored 3rd place in the 140 person class.
+        \item Built a Tetris bot in Python which scored 3rd place in the 140-person class.
         \item Received a top submission award on a system specification coursework.
-
-        \item Developed a container image build system, alternative to Dockerfile, as part of my final year dissertation.
+        \item Developed a container image build system, alternative to Dockerfiles, for my final-year dissertation.
       \end{itemize}
-
-    % \item \textbf{A-Level} \dashdiv{} (Shenzhen, China) Nanshan Chinese International College \dashdiv{} 2017-2019
-
-    %   Math, Further Math, Physics and Economics \dashdiv{} A*A*A*A*
   \end{itemize}
 
   \section{Additional activities}
 
   \begin{itemize}
     \item Dec 2023--Jul 2024: \textbf{Volunteer GCSE Math Tutor} for \href{https://www.theaccessproject.org.uk}{\color{link}The Access Project}
-    \item Jul 2020: Won first place in an algorithm contest of 180 people, rewarded with £1,000 Tesco gift card.
+    \item Jul 2020: Won first place in an algorithm contest with 180 participants, receiving a £1,000 Tesco gift card.
   \end{itemize}
 
   \section{Personal Projects}
@@ -130,34 +103,17 @@
   \begin{itemize}
     \item \href{https://chat.maowtm.org}{\textbf{\color{link}chat.maowtm.org}} \ghurl{https://github.com/micromaomao/chat.maowtm.org}: RAG-based AI chatbot doing an impression of myself \dashdiv{} Aug 2023
 
-    % \begin{itemize}
-    %   \item Based on Retrieval Augmented Generation, using the old OpenAI completion and embedding models, built as a Next.JS application with Fluent UI framework and PostgreSQL (Neon) as backend
-    % \end{itemize}
-
     \item \href{https://books.maowtm.org}{\textbf{\color{link}books.maowtm.org}} \ghurl{https://github.com/micromaomao/books.maowtm.org}: Online 3D virtual bookshelf built with Three.js \dashdiv{} Jun 2022
 
-    \item \href{https://bellclone.maowtm.org/}{\color{link}\textbf{Bellclone}} \ghurl{https://github.com/micromaomao/bellclone}: A re-make of the old Winterbells game built with Rust (wasm) and OpenGL \dashdiv{} Sept 2021
+    \item \href{https://bellclone.maowtm.org/}{\color{link}\textbf{Bellclone}} \ghurl{https://github.com/micromaomao/bellclone}: A remake of the classic Winterbells game, built with Rust (WASM) and OpenGL \dashdiv{} Sept 2021
 
     \item \textbf{ctclient} \ghurl{https://github.com/micromaomao/ctclient}: Certificate Transparency Log client in Rust with \href{https://blog.maowtm.org/ct/en.html}{\color{link}detailed blog article} \dashdiv{} Jul-Aug 2020
 
-    \item \href{https://leafvote.mww.moe}{\color{link}\textbf{Leafvote}} \ghurl{https://github.com/micromaomao/leafvote}: Paper-ticket based live voting solution built with React and NodeJS used by my high school \dashdiv{} Aug 2018
-
-    % \begin{itemize}
-    %   \item Uses MongoDB, WebSocket for lower latency, and LaTeX for voting ticket generation.
-    %   \item Successfully handled 300+ voters at once.
-    % \end{itemize}
+    \item \href{https://leafvote.mww.moe}{\color{link}\textbf{Leafvote}} \ghurl{https://github.com/micromaomao/leafvote}: Paper-ticket-based live voting solution built with React and NodeJS used by my high school \dashdiv{} Aug 2018
 
     \item \textbf{go-ecbpass} \ghurl{https://github.com/micromaomao/go-ecbpass}: Stateless, deterministic password manager built in Go \dashdiv{} Oct 2018
 
     \item \href{https://paper.sc}{\color{link}\textbf{paper.sc}} \ghurl{https://github.com/micromaomao/schsrch}: Past paper search engine built with React, NodeJS, Elasticsearch and PDF.js \dashdiv{} 2016--2019
-
-    % \begin{itemize}
-    %   \item Average of \raisebox{0.2\baselineskip}{\texttildelow}9000 daily searches over 365 days (2019-2020); recommended by a number of teachers.
-    %   % \item Custom PDF viewer with automatic cross-reference to solution sheets built with PDF.js.
-    % \end{itemize}
-
-    % (More projects available on GitHub)
-
   \end{itemize}
 
 \end{document}
