--- a/cv.tex
+++ b/cv.tex
@@ -8,18 +8,23 @@
     \coordinate (topleft) at (0, 0);
     \coordinate (topright) at (\textwidth, 0);
 
-    \node[font=\Large] (name) at (topleft) {Tingmao Wang};
-    \node (bio) at (name.south west) {%
+    \node[font=\Large, inner ysep=0.187cm] (name) at (topleft) {Tingmao Wang};
+    \node[inner ysep=0.1cm] (bio) at (name.south west) {%
     % {\color{black!50!white}\emph{(\today)}}
     Software Engineer at Microsoft UK who loves solving problems from all levels};
 
     \node[anchor=north east, text width=0.4\textwidth, align=flush right, inner ysep=0cm, yshift=0.05cm] (contacts) at (topright)
-      {m@{\color{link}\href{https://maowtm.org}{maowtm.org}} \\
+      {{%
+        \setstretch{1.2}%
+        m@{\color{link}\href{https://maowtm.org}{maowtm.org}}
+        \\
         {\color{link}\href{https://github.com/micromaomao}{\githubicon{} micromaomao}} \\
-        \href{https://blog.maowtm.org/}{\color{link}\pencil{}Blog}
-        };
+        \pencil{}:
+        \href{https://blog.maowtm.org/linux-ick/en.html}{\color{link}kernel}, \href{https://blog.maowtm.org/ct/en.html}{\color{link}security}, \href{https://blog.maowtm.org/dpdk/en.html}{\color{link}DPDK}, and \href{https://blog.maowtm.org/}{\color{link}more}
+        \\
+      }};
 
-    \coordinate (bottomleft) at ($(bio.south west)+(0, -0.1cm)$);
+    \coordinate (bottomleft) at ($(bio.south west)+(0, -0.15cm)$);
     \coordinate (bottomright) at ($(bottomleft)+(\textwidth, 0)$);
 
     \path[use as bounding box] (topleft) rectangle (bottomright);
@@ -35,13 +40,12 @@
 
   \begin{itemize}
     \setlength\itemsep{0.1\parskip}
-    \item Experience with system-level programming and debugging, including the Linux kernel and infrastructure-level cloud services.
-    \item Fluent: C/C++, Python, Go, Rust, JavaScript/TypeScript, Java. Quick to pick up new languages.
-    \item Skilled with Git, Docker, Kubernetes, Grafana, and developing in both a Linux and Windows environment
+    \item Experience with system-level programming and debugging, from the Linux kernel to web services.
+    \item Fluent languages includes C/C++, Python, Rust, JavaScript/TypeScript. Quick to pick up new ones.
+    \item Skilled with Git, Docker, Kubernetes, familiar with CI/CD (GitHub / Azure DevOps)
     \item Detailed knowledge of networking protocols (HTTP, TCP/IP, DNS, TLS) and familiarity with containers and virtualization.
-    \item Experience with cloud-native development on Azure, full-stack web development, databases
+    \item Experience with cloud-native development on Azure, backend / full-stack web development, and databases.
     % \item Experienced with specification, design, architecture, and security / threat modelling
-    \item Blog articles on \href{https://draft.blog.maowtm.org/linux-ick/en}{\color{link}Linux kernel experimentation}, \href{https://blog.maowtm.org/dpdk/en.html}{\color{link}DPDK}, \href{https://blog.maowtm.org/ct/en.html}{\color{link}deep-dive into Certificate Transparency}, \href{https://blog.maowtm.org/}{\color{link}and more}.
     \item Embrace challenges, collaboration and growth mindset. Able to prototype rapidly from loose requirements.
   \end{itemize}
 
@@ -53,7 +57,7 @@
 
     \begin{itemize}
       \item \textbf{Confidential Computing, Azure Core}: Working on Confidential Containers on Linux, contributing to the security of foundational Azure infrastructure.
-      \item Resolved an issue related to interrupt handling and worked around a VMBus-related bug for a Linux SEV-SNP guest under Hyper-V. Wrote CI pipeline to regularly stress-test the kernel and caught regressions.
+      \item Resolved an issue related to interrupt handling and worked around a VMBus-related bug for a Linux SEV-SNP guest under Hyper-V. Wrote CI pipeline to regularly stress-test our kernel tree and caught regressions.
     \end{itemize}
 
     \begin{itemize}
@@ -101,6 +105,8 @@
   \section{Personal Projects}
 
   \begin{itemize}
+    \item \href{https://lore.kernel.org/all/cover.1741047969.git.m%40maowtm.org}{\textbf{\color{link}Landlock-supervise}}: Extension to the Landlock LSM to support dynamic permission requests \dashdiv{} Feb 2025--current
+
     \item \href{https://chat.maowtm.org}{\textbf{\color{link}chat.maowtm.org}} \ghurl{https://github.com/micromaomao/chat.maowtm.org}: RAG-based AI chatbot doing an impression of myself \dashdiv{} Aug 2023
 
     \item \href{https://books.maowtm.org}{\textbf{\color{link}books.maowtm.org}} \ghurl{https://github.com/micromaomao/books.maowtm.org}: Online 3D virtual bookshelf built with Three.js \dashdiv{} Jun 2022
@@ -109,11 +115,11 @@
 
     \item \textbf{ctclient} \ghurl{https://github.com/micromaomao/ctclient}: Certificate Transparency Log client in Rust with \href{https://blog.maowtm.org/ct/en.html}{\color{link}detailed blog article} \dashdiv{} Jul-Aug 2020
 
-    \item \href{https://leafvote.mww.moe}{\color{link}\textbf{Leafvote}} \ghurl{https://github.com/micromaomao/leafvote}: Paper-ticket-based live voting solution built with React and NodeJS used by my high school \dashdiv{} Aug 2018
+    \item \href{https://leafvote.mww.moe}{\color{link}\textbf{Leafvote}} \ghurl{https://github.com/micromaomao/leafvote}: Live voting solution built with React and NodeJS used by 500+ people at my high school \dashdiv{} Aug 2018
 
     \item \textbf{go-ecbpass} \ghurl{https://github.com/micromaomao/go-ecbpass}: Stateless, deterministic password manager built in Go \dashdiv{} Oct 2018
 
-    \item \href{https://paper.sc}{\color{link}\textbf{paper.sc}} \ghurl{https://github.com/micromaomao/schsrch}: Past paper search engine built with React, NodeJS, Elasticsearch and PDF.js \dashdiv{} 2016--2019
+    % \item \href{https://paper.sc}{\color{link}\textbf{paper.sc}} \ghurl{https://github.com/micromaomao/schsrch}: Past paper search engine built with React, NodeJS, Elasticsearch and PDF.js \dashdiv{} 2016--2019
   \end{itemize}
 
 \end{document}
